<resources>
    <string name="app_name">MultiDDNS</string>
    
    <!-- Strings related to login -->
    <string name="prompt_username">用户名（如：ddns.ip71.cn）</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_mgr_email">管理员邮箱</string>
    <string name="prompt_mgr_password">管理员密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="action_mgr_register">注册管理员</string>
    <string name="action_update_password">修改密码</string>
    <string name="action_recharge">充值</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_id">用户名无效</string>
    <string name="error_invalid_password">请输入密码</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_incorrect_id_or_password">用户名或密码不正确</string>
    <string name="error_field_required">不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_mgr">我是管理员</string>
    <string name="title_activity_mgr_login">管理员登陆</string>
    <string name="title_activity_user_login">用户登陆</string>
    <string name="prompt_auth_code">验证码</string>
    <string name="action_get_auth_code">看不清，换一张</string>
    <string name="check_remember_me">记住密码</string>
    <string name="regist" />
    <string name="title_activity_mgr_register_step_1">验证邮箱或手机</string>
    <string name="title_activity_mgr_register_step_2">填写验证码</string>
    <string name="title_activity_mgr_register_step_3">填写详细信息</string>
    <string name="title_activity_select_renew_timeout">选择续费时长</string>
    <string name="action_renew">续费</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_id">邮箱/手机</string>
    <string name="action_get_phone_auth_code">获取验证码</string>
    <string name="action_next_step">下一步</string>
    <string name="prompt_mobile_auth_code">请输入邮箱或短信验证码</string>
    <string name="tip_send_auth_code">我们已给你的手机号码发送了一条验证短信</string>
    <string name="action_resend">重新发送</string>
    <string name="prompt_set_password">密码</string>
    <string name="prompt_re_password">再输入一次密码</string>
    <string name="tag_man">男</string>
    <string name="tag_woman">女</string>
    <string name="action_complete">完成</string>
    <string name="action_forget_password">忘记密码</string>
    <string name="title_user_list">用户列表</string>
    <string name="title_user_detail">User Detail</string>
    <string name="menu_setting">设置</string>
    <string name="action_mgr_info">管理员信息</string>
    <string name="action_goto_check">去审核</string>
    <string name="label_username">用户名：</string>
    <string name="label_domain">域名：</string>
    <string name="label_password">密码：</string>
    <string name="lable_auth_code">验证码：</string>
    <string name="action_save_user">保存</string>
    <string name="title_activity_add_user">添加用户</string>
    <string name="title_activity_select_domain">选择域名</string>
    <string name="title_activity_select_parse_span">选择解析间隔</string>
    <string name="label_hearbeat_time">心跳包时间：</string>
    <string name="label_domain_turn">域名转向</string>
    <string name="user_detail_label_username">用户名.域名</string>
    <string name="user_detail_label_deadline">有效日期</string>
    <string name="user_detail_label_register_date">注册日期</string>
    <string name="user_detail_label_live_date">活跃日期</string>
    <string name="user_detail_label_curr_ip">最新ip地址</string>
    <string name="user_detail_label_parse_span">解析间隔</string>
    <string name="user_detail_label_verify">审核</string>
    <string name="user_detail_label_redirect">域名转向</string>
    <string name="user_detail_label_password">密码</string>
    <string name="title_activity_edit_user_detail">修改用户信息</string>
    <string name="prompt_input_url">请输入要转向的地址</string>
    <string name="title_activity_mgr_update_password">修改密码</string>
    <string name="prompt_new_password">新密码</string>
    <string name="prompt_old_password">原密码</string>
    <string name="title_activity_mgr_detail">管理员信息</string>
    <string name="action_settings">Settings</string>
    <string name="label_kcid">KCID</string>
    <string name="label_kb">K币</string>
    <string name="label_nickname">昵称</string>
    <string name="label_email">邮箱</string>
    <string name="label_mobile">手机</string>
    <string name="prompt_gender">性别</string>
    <string name="title_activity_select_gender">选择性别</string>
    <string name="label_men">男</string>
    <string name="label_women">女</string>
    <string name="title_activity_user_renew">续费</string>
    <string name="prompt_renew_timeout">续费时长</string>
    <string name="label_month">个月</string>
    <string name="prompt_domain3">用户名</string>
    <string name="prompt_domain">域名</string>
    <string name="prompt_url">请输入要转向的地址</string>
    <string name="prompt_parse_span">解析间隔</string>
    <string name="label_seconds">秒</string>
    <string name="title_activity_check_pending_list">待审核列表</string>
    <string name="action_pass">通过</string>
    <string name="action">不通过</string>
    <string name="title_activity_update_mgr_detail">修改管理员资料</string>
    <string name="title_activity_edit_mgr_detail">编辑资料</string>
    <string name="label_gender">性别</string>
    <string name="title_activity_recharge">充值</string>
    <string name="title_activity_user_update_password">修改密码</string>
</resources>
